<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActiveAndroid Demo</string>

    <string name="add_button">Add</string>
    <string name="reset_button">Reset</string>
    <string name="clear_button">Clear</string>
    <string name="create_button">Create</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="price_hint">Price</string>

    <string name="category_label">Category:</string>

    <string name="add_product_dialog_tag">AddProductDialog</string>

    <string-array name="seed_categories">
        <item>Electronics</item>
        <item>Office Supplies</item>
        <item>Furniture</item>
    </string-array>

    <string-array name="seed_products">
        <item>Windows 8.1 Pro, Microsoft Windows 8.1 Professional Operating System Disk, 159.90, 1</item>
        <item>Computer System, All-in-one desktop computer, 549.99, 1</item>
        <item>Calculator, Scientific graphing calculator, 109.95, 2</item>
        <item>Paperweight, Simple red paperweight, 3.99, 2</item>
        <item>Office Chair, Black mesh sliding chair, 220.97, 3</item>
        <item>Office Desk, Black mesh chair w/ mat, 330.00, 3</item>
    </string-array>

</resources>
